Add x-axis at both top and bottom for Section 1.4 heatmap
- Set x.axis to 'top' to display axis at the top
- Add Plot.axisX with anchor 'bottom' to display axis at the bottom
- Add marginTop and marginBottom to accommodate both axes
- Matches the pattern used in Section 1.3

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -14,20 +14,20 @@ cisDB = await DuckDBClient.of({
 cisDataRaw = await cisDB.query(`SELECT * FROM cis_data`);
 
 cisData = cisDataRaw.map(row => ({
-    ...row,
+  ...row,
     // Clean null values represented as \N
     admin1_name: row.admin1_name === "\\N" || row.admin1_name === "" ? null : row.admin1_name,
     admin2_name: row.admin2_name === "\\N" || row.admin2_name === "" ? null : row.admin2_name,
     // Parse numeric fields
-    "weather-station_density": parseFloat(row["weather-station_density"]),
-    "cloud-coverage_meanannual": parseFloat(row["cloud-coverage_meanannual"]),
-    "cv-precipitation_agreement": parseFloat(row["cv-precipitation_agreement"]),
-    "short-term_frcst_skill": parseFloat(row["short-term_frcst_skill"]),
-    "seasonal_frcst_skill": parseFloat(row["seasonal_frcst_skill"]),
-    "cis_readiness_index": parseFloat(row["cis_readiness_index"]),
-    gaul0_code: parseInt(row.gaul0_code),
-    gaul1_code: parseInt(row.gaul1_code),
-    gaul2_code: parseInt(row.gaul2_code)
+  "weather-station_density": parseFloat(row["weather-station_density"]),
+  "cloud-coverage_meanannual": parseFloat(row["cloud-coverage_meanannual"]),
+  "cv-precipitation_agreement": parseFloat(row["cv-precipitation_agreement"]),
+  "short-term_frcst_skill": parseFloat(row["short-term_frcst_skill"]),
+  "seasonal_frcst_skill": parseFloat(row["seasonal_frcst_skill"]),
+  "cis_readiness_index": parseFloat(row["cis_readiness_index"]),
+  gaul0_code: parseInt(row.gaul0_code),
+  gaul1_code: parseInt(row.gaul1_code),
+  gaul2_code: parseInt(row.gaul2_code)
 }));
 ```
 
@@ -1040,7 +1040,7 @@ s13Data = {
         label: null,
         domain: countryOrder // Use pre-sorted order to maintain sort
       },
-      color: {
+      color: { 
         domain: [
           "Short-term RPSS (1–2 mo)",
           "Long-term RPSS (11–12 mo)",
@@ -1381,12 +1381,12 @@ s14MapData = {
       
       return {
         country: adminName,
-        "Weather Stations": d["weather-station_density"],
-        "Cloud Cover": d["cloud-coverage_meanannual"],
-        "Precip Agreement": parseFloat(d["cv-precipitation_agreement"]) / 4, // Normalize to 0-1
-        "Short-term Forecast": d["short-term_frcst_skill"],
-        "Long-term Forecast": d["seasonal_frcst_skill"],
-        "CIS Readiness": d["cis_readiness_index"]
+      "Weather Stations": d["weather-station_density"],
+      "Cloud Cover": d["cloud-coverage_meanannual"],
+      "Precip Agreement": parseFloat(d["cv-precipitation_agreement"]) / 4, // Normalize to 0-1
+      "Short-term Forecast": d["short-term_frcst_skill"],
+      "Long-term Forecast": d["seasonal_frcst_skill"],
+      "CIS Readiness": d["cis_readiness_index"]
       };
     }).filter(d => d["CIS Readiness"] != null);
     
@@ -1416,11 +1416,16 @@ s14MapData = {
     
     return Plot.plot({
       marginLeft: marginLeft,
+      marginTop: 40,
+      marginBottom: 60,
       width: 900,
       height: height,
+      x: { axis: "top" },
       y: { domain: sortedCountries },
       color: { scheme: "buylrd", legend: true },
       marks: [
+        // X-axis at bottom
+        Plot.axisX({ anchor: "bottom" }),
         Plot.cell(longData, { 
           x: "metric", 
           y: "country", 
