fix(section1&4): Fix data set paths to correct one for filtering and clean typo

--- a/notebooks/lossDamageNb/notebook_template.qmd
+++ b/notebooks/lossDamageNb/notebook_template.qmd
@@ -375,7 +375,8 @@ fig3_data = await FileAttachment(
 
 ```{ojs}
 fig1_arrayBuf = await FileAttachment(
-  "/data/lossDamageNb/fig1_farmsizelookup.parquet",
+  "/data/lossDamageNb/fig1_allshps.parquet",
+  // "/data/lossDamageNb/fig1_farmsizelookup.parquet",
 ).arrayBuffer();
 
 fig1_selVars = (async () => {
@@ -553,7 +554,7 @@ renderS3_plot = () => {
 
 ```{ojs}
 fig4a_arrayBuf = await FileAttachment(
-  "/data/lossDamageNb/fig4_map_fin_spei12_hiigh.parquet",
+  "/data/lossDamageNb/fig4_map_fin_spei12_high.parquet",
 ).arrayBuffer();
 
 fig4_selVars = (async () => {
