feat(appedix): hide source code again

--- a/notebooks/lossDamageNb/notebook_template.qmd
+++ b/notebooks/lossDamageNb/notebook_template.qmd
@@ -272,7 +272,7 @@ smallholders. Africa Agriculture Adaptation Atlas. CGIAR.
 
 # `{ojs} appendix` {#appendix}
 
-<!-- Source code {#source-code .hidden} -->
+# Source code {#source-code .hidden}
 
 <!--
 NOTE:Everything below this point will not appear in the notebook.
