fix(index ): Typo in index html

--- a/index.qmd
+++ b/index.qmd
@@ -9,10 +9,9 @@ notebooks being worked on, etc.
 
 # Notebooks
 
-Find the Loss and Damage Notebook [here](/notebooks/lossDamage.qmd)
+Find the Loss and Damage Notebook [here](/notebooks/lossDamageNb/lossDamage.qmd)
 
 # Other Documentation and Notebook Guidelines:
 
 - [Guidelines for Developing Observable Notebooks](/docs/nb_guidelines.qmd)
 - [Notebook Translation Guide](/docs/translation.qmd)
-
