--- a/index.qmd
+++ b/index.qmd
@@ -2,22 +2,25 @@
 title: "Adaptation Atlas Notebooks"
 ---
 
-# Demo Notebooks
+# V1 Notebooks
 
-These notebooks are example ports from the original Atlas [notebooks](https://observablehq.com/@adaptationatlas). These may be useful for reference, but are not actively maintained or updated. 
-They may also be useful as examples for how to create your own quarto notebooks. However, they may use old datasets, functions that are no longer applicable, and old code standards.
+These notebooks are example ports from the original Atlas
+[notebooks](https://observablehq.com/@adaptationatlas). These may be useful for
+reference, but are not actively maintained or updated. They may also be useful
+as examples for how to create your own quarto notebooks. However, they may use
+old datasets, functions that are no longer applicable, and old code standards.
 
-- [Analyze Women's Exposure To Climate Hazards](/notebooks/genderNB/gender.qmd)
-- [Discover Solutions](/notebooks/solutionsNB/DiscoverSolutions.qmd)
-
-# Notebook Template
-We provide a basic notebook template which can be copied and modified to assist in the development of new notebooks.
-This template creates the basic structure for the notebooks as well as loads in some of the useful 
-libraries and shared data (such as the admin boundaries).
-
-**Find the template [here](/notebooks/nb_template/notebook_template.qmd)**
+- [Analyze Women's Exposure To Climate Hazards](/notebooks/gender/gender.qmd)
+- [Discover Solutions](/notebooks/solutions/DiscoverSolutions.qmd)
+- [Explore the Data](/notebooks/explore/notebook.qmd)
+- [Understand Heat Stress on Producers](/notebooks/heatstressProducers/notebook.qmd)
+- [Discover Solutions](/notebooks/solutions/DiscoverSolutions.qmd)
+- [Projected Impacts](/notebooks/projectedImpacts/notebook.qmd)
+- [What's at Risk](/notebooks/whatsAtRisk/notebook.qmd)
+- [Prioritize Livestock Investment](/notebooks/livestock-notebook/notebook.qmd)
 
 # Other Documentation and Notebook Guidelines:
 
 - [Guidelines for Developing Observable Notebooks](/docs/nb_guidelines.qmd)
 - [Notebook Translation Guide](/docs/translation.qmd)
+
