--- a/notebooks/livestock-notebook/notebook.qmd
+++ b/notebooks/livestock-notebook/notebook.qmd
@@ -225,6 +225,8 @@ return num_selector
 
 ```{ojs}
 create_map(colorblindData.key);
+
+create_map(colorblindData.key).node();
 ```
 
 ```{ojs}
@@ -1299,247 +1301,114 @@ getTooltipContents = (d, colorBlind) => {
 ```
 
 ```{ojs}
-html` 
-<style> 
-.cooltip {
-  background: white;
-  border: 1px solid lightgrey;
-  padding: 10px;
-  position: absolute;
-  display: none;
-  max-width: 500px;
-  font-family: Helvetica, Arial, sans-serif;
-  z-index:10000
-}
-
-.content-wrapper-adaptation {
-  display: flex;
-  flex-wrap: wrap; /* Para que los elementos puedan envolverse en varias líneas si no hay suficiente espacio */
-  gap: 16px;
-}
-
-.chart-adaptation {
-  flex: 1; /* Para que ocupe el espacio restante */
-  margin-top: 30px;
-}
-
-.icons-emissions {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  gap: 10px;
-  max-width: 200px
-  flex: 1;
-}
-
-.icon-item {
-  display: flex;
-  align-items: center;
-}
-
-.icon-item svg {
-  width: 31px;
-  height: 31px;
-  margin: 7px 12px 0 7px;
-}
-
-@media (max-width: 600px) {
-  .content-wrapper-adaptation {
-    flex-direction: column;
-  }
-  .icons-emissions {
-    flex-basis: 50%; /* Tamaño inicial de los iconos */
-  }
-}
- .color-box {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
-  vertical-align: sub;
-}
-.custom-slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 15px;
-  background: linear-gradient(to right, ${initial_data[0].color}, ${initial_data[0].color} 50%, ${initial_data[1].color} 50%, ${initial_data[1].color});
-  border-radius: 5px;
-  outline: none;
-  margin: 20px 0;
-}
-
-.custom-slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 25px;
-  height: 25px;
-  background: grey;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.progress {
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  -webkit-mask: radial-gradient(#0000 59%,#000 60% 70%,#0000 71%);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-.progress::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: inherit;
-  background: conic-gradient(#40C70D var(--angle),lightgrey 0);
-  animation: 2s animate linear forwards;
-}
-
-@keyframes animate {
-	from {
-		--angle: 0deg;
-	}
-	to {
-		--angle: var(--p);
-	}
-	
-}
-
-@property --angle {
-	syntax: "<angle>"; /* this can be angle or percentage */
-	initial-value: 0deg;
-	inherits: false;
-}
-
-.download_data_am {
-  display: inline-flex;
-  flex-wrap: wrap;
-  gap: 12px;
-  margin: 10px 0;
-}
-
-</style>
-`;
-```
-
-```{ojs}
 countriesFiltered = filterCountries1(false, initial_data, NaN, num_priorities);
 ```
 
 ```{ojs}
 function create_map(colorBlind) {
-  const width = 1200;
-  const height = 1200;
-  let value = null;
+  const width = 1000;
+  const height = 700;
+  const padding = 10;
 
-  // const countriesFil = filterCountries1(mode, cobined, NaN, countd);
+  // Projection & path
+  const projection = d3.geoMercator();
+  const path = d3.geoPath().projection(projection);
 
-  //crear componentes
+  projection.fitExtent(
+    [
+      [padding, padding],
+      [width - padding, height - padding],
+    ],
+    world,
+  );
 
-  const projection = d4.geoCylindricalStereographic().scale(1000);
+  // Root container
+  const root = d3.create("div").style("position", "relative");
 
-  const path = d4.geoPath().projection(projection);
+  const figure = root.append("figure").attr("id", "svg_contain");
 
-  const root = d4.create("div").style("position", "relative");
+  // Legend
+  figure
+    .append(() => map_legend(colorBlind))
+    .attr("transform", "translate(10,0)");
 
-  const svg = root.append("figure").attr("id", "svg_contain");
-
-  svg.append(() => map_legend(colorBlind)).attr("transform", "translate(10,0)");
-
-  const svg_map = svg
+  // SVG map
+  const svg = figure
     .append("svg")
-    .attr("viewBox", [150, -250, width, 1150])
+    .attr("viewBox", [0, 0, width, height])
     .attr("id", "svg_map");
 
-  const tooltip = root.append("div").attr("class", "cooltip");
+  // Tooltip
+  const tooltip = root
+    .append("div")
+    .attr("class", "cooltip")
+    .style("position", "absolute")
+    .style("pointer-events", "none")
+    .style("display", "none");
 
-  //Agregar Paises al svg
-  const countries = svg_map
+  // Countries
+  svg
     .append("g")
     .attr("stroke", "white")
     .attr("stroke-linejoin", "round")
     .selectAll("path")
     .data(world.features)
-    .enter()
-    .append("path")
-    .attr("fill", function (d) {
-      // if (!mode) {
+    .join("path")
+    .attr("d", path)
+    .attr("fill", (d) => {
       const index = countriesFiltered.indexOf(d.properties.iso_a3);
-      if (index === -1) return getColorBlindRGB(colorBlind, "#EFEFEF"); // Si no está en countriesFil, color predeterminado
-      const fillScale = d4
+      if (index === -1) {
+        return getColorBlindRGB(colorBlind, "#EFEFEF");
+      }
+
+      const fillScale = d3
         .scaleLinear()
-        .domain([0, countriesFiltered.length]) // Rango de índices en countriesFil
-        .range(["#EC5A47", "#F4BB21"]); // Rango de colores deseados
+        .domain([0, countriesFiltered.length])
+        .range(["#EC5A47", "#F4BB21"]);
+
       return getColorBlindRGB(colorBlind, fillScale(index));
     })
-    // else {
-    //   return countriesFil.includes(d.properties.iso_a3) ||
-    //     !composite?.adaptation ||
-    //     !composite?.mitigation
-    //     ? getColorBlind_Input(colorBlind, "purple")
-    //     : color1(getTrafficLight(d.properties.iso_a3), colorBlind, mode);
-    // }
-    // })
-    .attr("d", path)
-    .on("mouseover", function (d) {
-      let node = tooltip.node();
-      node.innerHTML = "";
-      if (countriesFiltered.includes(d.properties.iso_a3)) {
-        tooltip.style("display", "");
-        this.classList.add("hovered");
-        d4.select(this).attr("stroke", "black").raise();
-        node.appendChild(getTooltipContents(d, colorBlind));
-      }
+
+    // ─────────────────────────────
+    // Mouse events (D3 v6+)
+    // ─────────────────────────────
+    .on("mouseover", function (event, d) {
+      if (!countriesFiltered.includes(d.properties.iso_a3)) return;
+
+      tooltip.style("display", "block").html("");
+      tooltip.node().appendChild(getTooltipContents(d, colorBlind));
+
+      d3.select(this).attr("stroke", "black").raise();
     })
-    .on("mousemove", function (d) {
-      if (countriesFiltered.includes(d.properties.iso_a3)) {
-        const rootBounds = d4
-          .select("#svg_contain")
-          .node()
-          .getBoundingClientRect();
-        const tooltipBounds = tooltip.node().getBoundingClientRect();
-        const mouseX = d4.event.pageX;
-        const mouseY = d4.event.pageY - rootBounds.top + 20;
-        const tooltipWidth = tooltipBounds.width;
-        const containerWidth = root.node().offsetWidth;
-        const screenWidth = window.innerWidth;
-        const tooltipX = mouseX - 20; // posición predeterminada del tooltip
 
-        const isSmallScreen = screenWidth <= 600;
+    .on("mousemove", function (event, d) {
+      if (!countriesFiltered.includes(d.properties.iso_a3)) return;
 
-        // Verificar si el cursor está en la mitad derecha o izquierda del contenedor
-        const isCursorOnRightHalf = mouseX > containerWidth / 2;
+      const [x, y] = d3.pointer(event, root.node());
 
-        let tooltipLeft;
-        if (isSmallScreen) {
-          tooltipLeft = 20;
-        } else {
-          tooltipLeft = isCursorOnRightHalf
-            ? mouseX - tooltipWidth + 20
-            : tooltipX - 20;
-        }
+      const tooltipWidth = tooltip.node().offsetWidth;
+      const screenWidth = window.innerWidth;
+      const isSmallScreen = screenWidth <= 600;
 
-        tooltip
-          .style("top", mouseY + "px")
-          .style("left", tooltipLeft + "px")
-          .style("display", "block");
-      }
+      const left = isSmallScreen
+        ? 20
+        : x + tooltipWidth > screenWidth
+          ? x - tooltipWidth - 20
+          : x + 20;
+
+      tooltip.style("left", `${left}px`).style("top", `${y + 20}px`);
     })
+
     .on("mouseout", function () {
-      this.classList.remove("hovered");
-      d4.select(this).attr("stroke", null).lower();
       tooltip.style("display", "none");
+
+      d3.select(this).attr("stroke", null).lower();
     });
+
+  console.log("root node:", root.node());
 
   return root.node();
 }
-```
-
-```{ojs}
-d4 = require("d3@5", "d3-geo@1", "d3-geo-projection@2");
 ```
 
 ```{ojs}
