--- a/docs/glossary.qmd
+++ b/docs/glossary.qmd
@@ -103,7 +103,7 @@ let currentLang = 'EN';
 let glossaryData = null;
 let searchQuery = '';
 
-fetch("./../../data/shared/glossary.json")
+fetch("./../../data/docs/glossary.json")
   .then(response => {
     if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
     return response.json();
