fix(lossDamage): Fix map on section 4 as it was not filtering down correctly when a country was selected. Also add some doc updates from Zia

--- a/notebooks/lossDamageNb/lossDamage.qmd
+++ b/notebooks/lossDamageNb/lossDamage.qmd
@@ -3,6 +3,7 @@ pagetitle: "Atlas Loss and Damage Notebook"
 nb-authors:
   - Zia Mehrabi
   - Ginni Braich
+  - Brayden Youngberg
 date-created: "2025-02-19"
 date-edited: today
 ---
@@ -25,8 +26,6 @@ atlasTOC({
   heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`,
 });
 ```
-
-## `{ojs} keyInsights` {class='key-insights' #key-insight-text}
 
 # `{ojs} heading1` {#example-heading1}
 
@@ -187,21 +186,20 @@ programs.
 We integrate spatial, demographic, and agricultural datasets to generate
 harmonized projections of African farm size distributions from 2000 to 2060.
 Spatial farm structure data from the CIAT/LUGE Smallholder Map were combined
-with demographic projections from SSP2T and validated against the FAO World
-Census of Agriculture, alongside auxiliary sources such as Ricciardi et al.
-(2018) and Aliber & Hart (2009). For each country and administrative unit,
-representative farm sizes were sampled from uniform or log-normal distributions
-by size class, weighted by farm counts, and corrected via a mean-shift algorithm
-to align with projected agricultural area totals. Corrected samples were
-rebinned into standardized size categories and adjusted according to one of
-three data availability cases—full data (spatial + demographic),
-demographic-only, or spatial-only—using proportional scaling, continental
-averages, or Ethiopia-based growth factors, respectively. Missing values were
-filled using country or continental means, and all outputs were validated to
-ensure consistency with farm totals, agricultural area, and realistic
-distributional shapes. The resulting harmonized dataset provides subnational
-farm size distributions for all African countries at decadal intervals
-through 2060.
+with demographic projections from Mehrabi et al. 2023 and validated against the
+FAO World Census of Agriculture, alongside auxiliary sources such as Ricciardi
+et al. (2018) and Aliber & Hart (2009). For each country and administrative
+unit, representative farm sizes were sampled from uniform or log-normal
+distributions by size class, weighted by farm counts, and corrected via a
+mean-shift algorithm to align with projected agricultural area totals. Corrected
+samples were rebinned into standardized size categories and adjusted according
+to one of three data availability cases—full data (spatial + demographic),
+demographic-only, or spatial-only—using proportional scaling, dependent on data
+availability. Missing values were filled using country or continental means, and
+all outputs were validated to ensure consistency with farm totals, agricultural
+area, and realistic distributional shapes. The resulting harmonized dataset
+provides subnational farm size distributions for all African countries at
+decadal intervals through 2000-2060.
 
 ## Loss and proportion of lost reveneue probabilities
 
@@ -210,19 +208,18 @@ floods) vary as a function of farm size using harmonized household survey data
 from 17 countries across Africa, Asia, and Latin America. The study employs a
 dataset developed by Mehrabi, Fortin, and Ramankutty, which integrates
 household-level farm size, reported production losses, and corresponding
-climatic indicators (SPEI). Data preparation included country-specific scaling
-and outlier corrections to harmonize farm size distributions and
-log-transformations to address skewness. Two main model types were implemented:
-(1) binary loss models estimating the probability of experiencing a
-climate-induced production loss, and (2) continuous loss models quantifying the
-percentage of revenue lost. Both models incorporated interactions between
-log-transformed farm size and event type (drought or flood) and used multilevel
-random effects structures to account for nested spatial hierarchies (country and
-administrative units). Models were further filtered for high SPEI thresholds (<
-–0.99 for drought, > 0.99 for flood) to isolate the effects of severe climatic
-events. Diagnostic checks, including residual simulation and bootstrapping, were
-used to validate model assumptions, ensuring robust inference on the
-relationship between farm size and vulnerability to climate shocks.
+climatic indicators. Two main model types were implemented: (1) binary loss
+models estimating the probability of experiencing a climate-induced production
+loss, and (2) continuous loss models quantifying the percentage of revenue lost.
+Both models incorporated interactions between log-transformed farm size and
+event type (drought or flood) and used multilevel random effects structures to
+account for nested spatial hierarchies (country and administrative units).
+Models were further filtered for high SPEI thresholds (< –0.99 for drought, >
+0.99 for flood) to isolate the effects of severe climatic events. Diagnostic
+checks, including residual simulation and bootstrapping, were used to check
+model assumptions,  with alternative robust models being run to check robustness
+of inference on the relationship between farm size and vulnerability to climate
+shocks.
 
 ## Historical and CMIP6 estimates of loss by farm type
 
@@ -270,6 +267,12 @@ smallholder farmers. LUGE lab/Better Planet Laboratory.
 To cite this notebook : Mehrabi, Z., Braich, G. 2025. Climate payouts to
 smallholders. Africa Agriculture Adaptation Atlas. CGIAR.
 
+## Acknowledgements
+
+This notebook was developed in partnership with the
+[Better Planet Labratory](https://betterplanetlab.com/). We also acknowledge
+Brayden Youngberg for translating the original R Shiny notebook to JavaScript.
+
 # `{ojs} appendix` {#appendix}
 
 # Source code {#source-code .hidden}
@@ -286,8 +289,8 @@ actually appearing in the notebook.
 ```{ojs}
 // This cell is to contain all the headings and the notebook title
 nbTitle = _lang({
-  en: "Loss and Damage",
-  fr: "Perte et dommage",
+  en: "Climate Payouts to Smallholders",
+  fr: "",
 });
 // key_insights = _lang({en: "Key Insights", fr: "Résumé"})
 heading1 = _lang({ en: "Overview", fr: "Titre 1" });
@@ -337,7 +340,8 @@ getBounds = async (country) => {
   };
 };
 
-mapBounds = await getBounds(fig1_inputs.country);
+fig1_mapBounds = await getBounds(fig1_inputs.country);
+fig4_mapBounds = await getBounds(fig4_inputs.country);
 ```
 
 ## Section code
@@ -428,7 +432,7 @@ fig1a_filtered = await hypq.parquetQuery({
 fig1a_spatial = joinGeo({
   data: fig1a_filtered,
   dataKeys: ["GID_0", "NAME_0", "NAME_1", "nm_slc0"],
-  geojson: mapBounds,
+  geojson: fig1_mapBounds,
   geoKeys: ["GID_0", "NAME_0", "NAME_1", "nm_slc0"],
   valueKeys: ["value"],
 });
@@ -475,12 +479,12 @@ renderS1_insight = () => {
   return html`
   <div>
     <h4>Quick Insights for ${_country}</h4>
-    <b>${_country}</b> has a total of 
-    <b>${fmtVal(sumpr)}</b> farms in the 
+    <b>${_country}</b> has a total of
+    <b>${fmtVal(sumpr)}</b> farms in the
     <b>${fig1_inputs.fSize}</b> farm size class for the baseline year, circa 2020.
     <br><br>
-    The total number of farms is expected to change to 
-    <b>${fmtVal(sumfr)}</b> by 2050, under SSP 245. 
+    The total number of farms is expected to change to
+    <b>${fmtVal(sumfr)}</b> by 2050, under SSP 245.
     This represents <b>${trend}</b> of <b>${pct.toFixed(1)}%</b>.
   </div>
 `;
@@ -730,7 +734,7 @@ fig4a_filtered = await hypq.parquetQuery({
 fig4a_spatial = joinGeo({
   data: fig4a_filtered,
   dataKeys: ["GID_0", "NAME_0", "NAME_1", "nm_slc0"],
-  geojson: mapBounds,
+  geojson: fig4_mapBounds,
   geoKeys: ["GID_0", "NAME_0", "NAME_1", "nm_slc0"],
   valueKeys: ["high_fs"],
 });
